--- a/index.html
+++ b/index.html
@@ -2,22 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>ROME</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>ROME</title> <!-- using a nickname for privacy reasons -->
+    <link rel="stylesheet" type="text/css" href=" css/styles.css">
     <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm ROME.</h1>
       <p>a programmer.</p>
-      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-      <img src="mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+
+    <div class="contact">
+      <a href="contact.html">
+          <br>Contact
+        </a>
+
+    </div>
+    <div class="home">
+    <a href="index.html"><br>Home</a>
+    </div>
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile" src="profile.png" alt="profile pic" width="200">
+        <img class="profile" src="images/profile.png" alt="profile pic" width="200">
         <h2>Hello.</h2>
        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
       </div>
@@ -34,13 +44,7 @@
           <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
       </div>
-      <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:raghmae@gmail.com">CONTACT ME</a>
-      </div>
+
     </div>
 
 
@@ -51,3 +55,4 @@
     </div>
   </body>
 </html>
+
